--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,7 @@ Mask_RCNN/.env
 Mask_RCNN/.venv
 Mask_RCNN/venv/
 Mask_RCNN/ENV/
+
+
+Mask_RCNN/mrcnn/__pycache__/
+Mask_RCNN/samples/coco/__pycache__/
